--- a/PredictWineQuality.ipynb
+++ b/PredictWineQuality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -367,27 +367,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Canvas is accessible via web browser at the URL: http://localhost:41704/index.html\n",
-      "Opening Canvas in default web browser.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wines.show(view = \"Scatter Plot\", x = 'alcohol', y = 'quality')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -398,216 +389,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>Linear regression:</pre>"
-      ],
-      "text/plain": [
-       "Linear regression:"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>--------------------------------------------------------</pre>"
-      ],
-      "text/plain": [
-       "--------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of examples          : 1267</pre>"
-      ],
-      "text/plain": [
-       "Number of examples          : 1267"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of features          : 1</pre>"
-      ],
-      "text/plain": [
-       "Number of features          : 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of unpacked features : 1</pre>"
-      ],
-      "text/plain": [
-       "Number of unpacked features : 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of coefficients    : 2</pre>"
-      ],
-      "text/plain": [
-       "Number of coefficients    : 2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Starting Newton Method</pre>"
-      ],
-      "text/plain": [
-       "Starting Newton Method"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>--------------------------------------------------------</pre>"
-      ],
-      "text/plain": [
-       "--------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
-      ],
-      "text/plain": [
-       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| 1         | 2        | 0.008826     | 2.858385           | 0.708894      |</pre>"
-      ],
-      "text/plain": [
-       "| 1         | 2        | 0.008826     | 2.858385           | 0.708894      |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>SUCCESS: Optimal solution found.</pre>"
-      ],
-      "text/plain": [
-       "SUCCESS: Optimal solution found."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre></pre>"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alcohol_model = graphlab.linear_regression.create(train_data, target = 'quality', features = ['alcohol'], validation_set = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'max_error': 2.7475042680276838, 'rmse': 0.7143871636521615}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print alcohol_model.evaluate(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -618,91 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f0a344999d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7f0a46c6b690>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(test_data['alcohol'], test_data['quality'], '.', test_data['alcohol'], alcohol_model.predict(test_data), '-')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
-       "    <tr>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1.79275135558</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.197083569471</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">alcohol</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.36960307593</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0188245903544</td>\n",
-       "    </tr>\n",
-       "</table>\n",
-       "[2 rows x 4 columns]<br/>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Columns:\n",
-       "\tname\tstr\n",
-       "\tindex\tstr\n",
-       "\tvalue\tfloat\n",
-       "\tstderr\tfloat\n",
-       "\n",
-       "Rows: 2\n",
-       "\n",
-       "Data:\n",
-       "+-------------+-------+---------------+-----------------+\n",
-       "|     name    | index |     value     |      stderr     |\n",
-       "+-------------+-------+---------------+-----------------+\n",
-       "| (intercept) |  None | 1.79275135558 |  0.197083569471 |\n",
-       "|   alcohol   |  None | 0.36960307593 | 0.0188245903544 |\n",
-       "+-------------+-------+---------------+-----------------+\n",
-       "[2 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alcohol_model.get('coefficients')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -713,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -724,266 +466,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Canvas is updated and available in a tab in the default browser.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wines[my_features].show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Canvas is updated and available in a tab in the default browser.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wines.show(view='BoxWhisker Plot', x='alcohol', y='quality')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>Linear regression:</pre>"
-      ],
-      "text/plain": [
-       "Linear regression:"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>--------------------------------------------------------</pre>"
-      ],
-      "text/plain": [
-       "--------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of examples          : 1267</pre>"
-      ],
-      "text/plain": [
-       "Number of examples          : 1267"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of features          : 5</pre>"
-      ],
-      "text/plain": [
-       "Number of features          : 5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of unpacked features : 5</pre>"
-      ],
-      "text/plain": [
-       "Number of unpacked features : 5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Number of coefficients    : 6</pre>"
-      ],
-      "text/plain": [
-       "Number of coefficients    : 6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Starting Newton Method</pre>"
-      ],
-      "text/plain": [
-       "Starting Newton Method"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>--------------------------------------------------------</pre>"
-      ],
-      "text/plain": [
-       "--------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
-      ],
-      "text/plain": [
-       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| 1         | 2        | 0.027501     | 2.724179           | 0.661504      |</pre>"
-      ],
-      "text/plain": [
-       "| 1         | 2        | 0.027501     | 2.724179           | 0.661504      |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>SUCCESS: Optimal solution found.</pre>"
-      ],
-      "text/plain": [
-       "SUCCESS: Optimal solution found."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre></pre>"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_features_model = graphlab.linear_regression.create(train_data, target='quality', features=my_features, validation_set=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'max_error': 2.7475042680276838, 'rmse': 0.7143871636521615}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print alcohol_model.evaluate(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'max_error': 2.6665423137183373, 'rmse': 0.6721490184084276}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print my_features_model.evaluate(test_data)"
    ]
@@ -999,10 +530,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:gl-env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-gl-env-py"
   },
   "language_info": {
    "codemirror_mode": {
